lavf/matroskaenc: use integers to for display size.

Avoid rounding differences between x86_32 and x86_64.
Fix trac ticket #1997.